--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body{
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 60px;
+    margin-top: 30px;
 }
 
 .coin-text{
@@ -30,7 +30,7 @@ body{
 
 .coin-input{
     padding-left: 20px;
-    width: 100%;
+    width: 500px;
     height: 50px;
     background-image: linear-gradient(-110deg, #00e0c2 0%, #0f3a99 50%, #0060f0 100%);
     border-radius: 10px;
@@ -49,4 +49,13 @@ body{
 
 .coin-percent{
     font-weight: 600;
+}
+
+.coins-container{
+    margin-top: 130px;
+}
+
+form{
+    display: flex;
+    justify-content: center;
 }
