--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@ body{
     background-image: linear-gradient(-110deg, #00e0c2 0%, #0f3a99 50%, #0060f0 100%);
     border-radius: 10px;
     border: none;
-
+    color: white;
 }
 
 .coin-input::placeholder{
